--- a/package.json
+++ b/package.json
@@ -20,44 +20,46 @@
     "uuid": "^8.3.2",
     "vite-plugin-pages": "^0.24.3",
     "vue": "^3.2.37",
-    "vue-router": "^4.0.16"
+    "vue-router": "^4.1.2"
   },
   "devDependencies": {
     "@progress/kendo-licensing": "^1.2.2",
     "@progress/kendo-theme-default": "^5.5.0",
-    "@progress/kendo-vue-animation": "^3.4.0",
-    "@progress/kendo-vue-buttons": "^3.4.0",
-    "@progress/kendo-vue-dialogs": "^3.4.0",
-    "@progress/kendo-vue-editor": "^3.4.0",
-    "@progress/kendo-vue-form": "^3.4.0",
-    "@progress/kendo-vue-indicators": "^3.4.0",
-    "@progress/kendo-vue-inputs": "^3.4.0",
-    "@progress/kendo-vue-layout": "^3.4.0",
-    "@progress/kendo-vue-notification": "^3.4.0",
-    "@progress/kendo-vue-popup": "^3.4.0",
+    "@progress/kendo-vue-animation": "^3.4.3",
+    "@progress/kendo-vue-buttons": "^3.4.3",
+    "@progress/kendo-vue-dialogs": "^3.4.3",
+    "@progress/kendo-vue-editor": "^3.4.3",
+    "@progress/kendo-vue-form": "^3.4.3",
+    "@progress/kendo-vue-indicators": "^3.4.3",
+    "@progress/kendo-vue-inputs": "^3.4.3",
+    "@progress/kendo-vue-intl": "^3.4.3",
+    "@progress/kendo-vue-layout": "^3.4.3",
+    "@progress/kendo-vue-notification": "^3.4.3",
+    "@progress/kendo-vue-popup": "^3.4.3",
+    "@progress/kendo-vue-progressbars": "^3.4.3",
     "@rushstack/eslint-patch": "^1.1.0",
     "@types/jsdom": "^16.2.14",
     "@types/lodash-es": "^4.17.6",
-    "@types/node": "^16.11.41",
+    "@types/node": "^16.11.43",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
-    "@vue/test-utils": "^2.0.0",
+    "@vue/test-utils": "^2.0.2",
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.7",
-    "cypress": "^10.1.0",
-    "eslint": "^8.5.0",
+    "cypress": "^10.3.0",
+    "eslint": "^8.19.0",
     "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-vue": "^9.0.0",
+    "eslint-plugin-vue": "^9.2.0",
     "jsdom": "^20.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
     "prettier": "^2.5.1",
     "start-server-and-test": "^1.14.0",
-    "tailwindcss": "^3.1.4",
+    "tailwindcss": "^3.1.6",
     "typescript": "~4.7.4",
-    "vite": "^2.9.12",
+    "vite": "^2.9.14",
     "vitest": "^0.15.1",
-    "vue-tsc": "^0.38.1"
+    "vue-tsc": "^0.38.5"
   }
 }
