--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "uuid": "^8.3.2",
     "vite-plugin-pages": "^0.24.3",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.2"
+    "vue-router": "^4.1.2",
+    "pinia": "^2.0.16"
   },
   "devDependencies": {
     "@progress/kendo-licensing": "^1.2.2",
@@ -41,6 +42,7 @@
     "@rushstack/eslint-patch": "^1.1.0",
     "@types/jsdom": "^16.2.14",
     "@types/lodash-es": "^4.17.6",
+    "@types/uuid": "^8.3.4",
     "@types/node": "^16.11.43",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue/eslint-config-prettier": "^7.0.0",
